@@ -1,5 +1,11 @@
 *SVN*
 
+* Fix errors with around_filters which do not yield, restore 1.1 behaviour with after filters. Closes #8891 [skaes]
+
+  After filters will *no longer* be run if an around_filter fails to yield, users relying on
+  this behaviour are advised to put the code in question after a yield statement in an around filter.
+  
+
 * Allow you to delete cookies with options. Closes #3685 [josh, Chris Wanstrath]
 
 * Allow you to render views with periods in the name.  Closes #8076 [norbert]
